--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -29,6 +29,7 @@ body {
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    outline: none !important;
 }
 
 i {
@@ -339,6 +340,9 @@ nav:hover .Title {
     border-left: none;
     border-top: none;
     box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
+    max-height: calc(100vh - 40px);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .channelList {
@@ -360,7 +364,10 @@ nav:hover .Title {
 .channelNameColumn {
     color: var(--font_title);
     padding-left: 10px;
-    width: 275px;
+    width: 250px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .channelButtonColumn {
