--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -22,7 +22,8 @@
 }
 
 #app {
-    height: 100%;
+    min-height: 100%;
+    height: auto;
 }
 
 #ctxMenu {
@@ -41,13 +42,37 @@
     margin-top: 50px;
     position: fixed;
     z-index: 2000;
-    width: 400px;
+    width: 500px;
     height: auto;
     background-color: var(--nav_bg);
     color: var(--font_title);
+    padding-top: 10px;
+    padding-top: 10px;
+    font-size: 18px;
     box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
-    padding-top: 10px;
-    padding-top: 10px;
+}
+
+    #informationOverlay button {
+        padding: 3px;
+        margin-left: calc(100% - 40px);
+    }
+
+        #informationOverlay button:hover {
+            background-color: var(--mainColor);
+            color: var(--secColor);
+        }
+
+#notifications {
+    position: fixed;
+    z-index: 2000;
+    width: 500px;
+    right: 15px;
+    bottom: 15px;
+    height: auto;
+    background-color: var(--nav_bg);
+    color: var(--font_title);
+    font-size: 18px;
+    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
 }
 
 html {
@@ -920,16 +945,47 @@ button.deleteTagFilterButton:hover {
 .informationOverlayRow {
     padding: 3px;
     display: flex;
-    width: 100%;
-    height: 24px;
+    width: calc(100% - 6px);
+    height: 28px;
     align-items: center;
+    border-left: 2px solid transparent;
 }
 
     .informationOverlayRow:hover {
-        background-color: var(--bg);
+        border-left: 2px solid var(--mainColor);
     }
 
     .informationOverlayRow p {
-        width: 50%;
+        width: 60%;
         display: inline-block;
+    }
+
+    .informationOverlayRow label {
+        width: 40%;
+        display: inline-block;
+    }
+
+.message {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+    cursor: pointer;
+}
+
+    .message img {
+        float: left;
+        height: 100%;
+        width: auto;
+        margin-right: 8px;
+    }
+
+    .message p {
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+        margin: 0;
     }
