--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -4,7 +4,7 @@
     --nav_bg: #0b0b0b;
     --font_title: #fafafa;
     --font_text: #b8b8b8;
-    --video_bd_bot: #969696;
+    --video_bd_bot: #666666;
 }
 
 .light-mode {
@@ -13,7 +13,7 @@
     --nav_bg: #ffffff;
     --font_title: #131313;
     --font_text: #969696;
-    --video_bd_bot: #969696;
+    --video_bd_bot: #c6c6c6;
 }
 
 :root {
@@ -144,6 +144,7 @@ input[type=text] {
     padding: 2px;
     border: solid var(--font_text) 1px;
     width: 250px;
+    height: 18px;
     color: var(--font_title);
     background-color: var(--bg);
 }
@@ -473,6 +474,43 @@ nav:hover .Title {
         border-radius: 50%;
         vertical-align: middle;
         cursor: pointer;
+    }
+
+.channelLastRowDiv {
+    padding: 5px 5px 5px 10px;
+    display: flex;
+    flex-direction: row;
+}
+
+    .channelLastRowDiv input {
+        width: 100%;
+        height: 24px;
+        margin: 0;
+    }
+
+    .channelLastRowDiv div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        width: auto;
+        flex: 1 1 auto;
+    }
+
+.addChannelButton {
+    border-radius: 0;
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    border: 1px solid var(--font_text);
+    color: var(--font_title);
+    background-color: transparent;
+}
+
+    .addChannelButton:hover {
+        color: var(--secColor);
+        background-color: var(--mainColor);
     }
 
 .channelNameColumn {
