added context delete and context paste (not in Firefox) + minor context fixes

--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -1036,6 +1036,7 @@ button.deleteTagFilterButton:hover {
 
 .disabledMenuButton {
     background-color: var(--font_text);
+    justify-content: flex-start;
 }
 
     .disabledMenuButton:hover {
