added add channel notifications and special day notifications

--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -283,8 +283,7 @@ nav:hover .Title {
     }
 
 .activeNavButton {
-    padding-bottom: 0;
-    border-bottom: 3px solid var(--mainColor);
+    border-top: 3px solid var(--mainColor);
 }
 
 .videoChannelDiv {
