--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -26,6 +26,60 @@
     height: auto;
 }
 
+#confirmationMenu {
+    top: 0;
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #00000033;
+    z-index: 2000;
+    justify-content: center;
+    align-items: center;
+}
+
+    #confirmationMenu div {
+        width: 150px;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg);
+        border: 1px solid var(--video_bd_bot);
+        box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
+    }
+
+        #confirmationMenu div p {
+            color: var(--font_title);
+            padding: 20px;
+            text-align: center;
+            margin: 0;
+        }
+
+        #confirmationMenu div div {
+            padding: 0 0 10px 0;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            box-shadow: none;
+            border: none;
+        }
+
+            #confirmationMenu div div button {
+                width: 36px;
+                height: 36px;
+                margin: 0 10px 0 10px;
+                padding: 0;
+                color: var(--font_title);
+                background: var(--bg);
+                box-shadow: none;
+            }
+
+                #confirmationMenu div div button:hover {
+                    color: var(--secColor);
+                    background: var(--mainColor);
+                    box-shadow: none;
+                }
+
 #ctxMenu {
     position: fixed;
     display: none;
