--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -176,6 +176,10 @@ button {
     cursor: pointer;
 }
 
+    button:focus {
+        outline: none;
+    }
+
 nav button {
     height: 100%;
     width: 40px;
