added quick delete and redesigned search in nightly

--- a/SubBox/wwwroot/css/localbrowser.css
+++ b/SubBox/wwwroot/css/localbrowser.css
@@ -67,17 +67,63 @@ nav {
 
 input {
     width: 250px;
-    background: none;
-    border-color: #8f54f1;
+    background: #2a2a2a;
+    border-color: #2a2a2a;
     border-style: solid;
     border-width: 1px;
+    border-radius: 5px 0 0 5px;
     color: #ffffff;
     font-size: 16px;
     padding: 5px;
 }
 
     input:hover, input:focus {
-        border-color: #ff0166;
+        background: #3a3a3a;
+        border-color: #3a3a3a;
+    }
+
+.activeSearch {
+    background: none;
+    border-color: #8f54f1;
+}
+
+    .activeSearch:hover {
+        border-color: #af64f1;
+    }
+
+.deleteModeButton {
+    padding: 0 8px 0 8px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    border: none;
+    background: #2a2a2a;
+    border-radius: 0 5px 5px 0;
+    color: #fafafa;
+    margin-left: 2px;
+    width: 24px;
+    transition: width 0.2s;
+}
+
+    .deleteModeButton:hover {
+        background: #3a3a3a;
+    }
+
+.activeDeletion {
+    background: #8f54f1;
+    width: 160px;
+    transition: width 0.5s;
+}
+
+    .activeDeletion p {
+        font-family: 'Roboto', sans-serif;
+        font-size: 14px;
+        padding-left: 5px;
+    }
+
+    .activeDeletion:hover {
+        background: #af64f1;
     }
 
 .grid {
@@ -295,7 +341,8 @@ input {
 .filterDiv {
     position: absolute;
     display: flex;
-    top: 5px;
-    left: calc(50% - 125px);
-    width: 250px;
+    justify-content: flex-start;
+    top: 7px;
+    left: calc(50% - 225px);
+    width: 450px;
 }
