--- a/SubBox/wwwroot/css/index.css
+++ b/SubBox/wwwroot/css/index.css
@@ -39,23 +39,23 @@
 }
 
     #confirmationMenu div {
-        width: 150px;
+        width: 250px;
         display: flex;
         flex-direction: column;
-        background: var(--bg);
+        background: var(--nav_bg);
         border: 1px solid var(--video_bd_bot);
         box-shadow: 0 5px 10px -6px rgba(0, 0, 0, .4);
     }
 
         #confirmationMenu div p {
             color: var(--font_title);
-            padding: 20px;
+            padding: 20px 0 20px 0;
             text-align: center;
             margin: 0;
         }
 
         #confirmationMenu div div {
-            padding: 0 0 10px 0;
+            padding: 0;
             width: 100%;
             display: flex;
             flex-direction: row;
@@ -65,12 +65,12 @@
         }
 
             #confirmationMenu div div button {
-                width: 36px;
+                width: 50%;
                 height: 36px;
-                margin: 0 10px 0 10px;
+                margin: 0;
                 padding: 0;
                 color: var(--font_title);
-                background: var(--bg);
+                background: none;
                 box-shadow: none;
             }
 
@@ -221,10 +221,9 @@ nav button:hover {
     }
 
 input[type=text] {
-    margin-right: 2px;
-    margin-left: 2px;
+    margin-left: 4px;
     border-radius: 0;
-    padding: 2px;
+    padding: 4px;
     border: solid var(--font_text) 1px;
     width: 250px;
     height: 18px;
@@ -289,6 +288,7 @@ select {
 }
 
 .Title {
+    position: absolute;
     background-color: none;
     margin: 0;
     color: var(--font_title);
@@ -314,6 +314,15 @@ nav:hover .Title {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: 2s ease;
+}
+
+.listCount {
+    background-color: none;
+    margin: 0;
+    color: var(--font_title);
+    cursor: default;
+    letter-spacing: 1px;
+    font-weight: bold;
 }
 
 nav div {
@@ -367,6 +376,14 @@ nav div {
     align-items: center;
     vertical-align: middle;
     height: 100%;
+}
+
+.channelPic {
+    margin: 0 8px 0 8px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    vertical-align: middle;
 }
 
 .refreshButton {
@@ -606,7 +623,7 @@ nav div {
 
     .channelLastRowDiv input {
         width: 100%;
-        height: 24px;
+        height: 20px;
         margin: 0;
     }
 
@@ -778,6 +795,15 @@ button.deleteChannelButton:hover {
     display: flex;
     align-items: center;
     height: 100%;
+}
+
+.addPlaylistButton {
+    padding: 0;
+    margin: 0;
+    border: 1px solid var(--font_text);
+    height: 28px;
+    width: 28px;
+    font-size: 24px;
 }
 
 .videoListDiv {
